--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -1,4 +1,5 @@
-name: Send Daily German Words A1-B2
+name: Daily German Bot
+
 on:
   schedule:
     - cron: '0 7 * * *'  # 매일 아침8시 (독일)
@@ -6,21 +7,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  run:
+  daily-send:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.21"
+          go-version: 1.21
 
-      - name: Run bot
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Run Bot
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          go mod tidy
-          go run main.go
+        run: go run main.go
