--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "sinramyeon"
+          git config user.email "esistkalt@naver.com"
 
           git add chat_ids.json
 
